update warna, setting edit produk

--- a/app/src/main/res/layout-land/app_bar_main.xml
+++ b/app/src/main/res/layout-land/app_bar_main.xml
@@ -97,6 +97,7 @@
                             <ImageView
                                 android:id="@+id/img_barcode"
                                 android:layout_width="wrap_content"
+                                android:tint="@color/green_dark"
                                 android:paddingBottom="@dimen/paddingLarge"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentRight="true"
@@ -164,6 +165,7 @@
                             android:layout_marginRight="20dp"
                             android:paddingLeft="16dp"
                             android:paddingTop="14dp"
+                            android:tint="@color/green_dark"
                             android:paddingRight="1dp"
                             android:src="@drawable/ic_list_order"
                             android:text="Pondok Aren"
@@ -248,6 +250,7 @@
                         android:layout_gravity="center"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:background="@drawable/et_style2"
+                        android:drawableTint="@color/green_dark"
                         android:clickable="true"
                         android:drawableRight="@drawable/ic_laporan"
                         android:drawablePadding="@dimen/paddingXXXSmall"
@@ -352,6 +355,7 @@
                             android:layout_gravity="center"
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
+                            android:drawableTint="@color/green_dark"
                             android:clickable="true"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
@@ -462,6 +466,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -536,6 +541,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -610,6 +616,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -734,7 +741,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-
+                        android:drawableTint="@color/green_dark"
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -963,6 +970,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -1034,6 +1042,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -1138,6 +1147,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -1293,6 +1303,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginRight="@dimen/paddingMedium"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableLeft="@drawable/ic_add"
                             android:drawablePadding="@dimen/paddingSmall"
                             android:focusable="true"
@@ -1397,6 +1408,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
