--- a/app/src/main/res/layout-sw600dp/app_bar_main.xml
+++ b/app/src/main/res/layout-sw600dp/app_bar_main.xml
@@ -100,6 +100,7 @@
                                 android:paddingBottom="@dimen/paddingLarge"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentRight="true"
+                                android:tint="@color/green_dark"
                                 android:layout_alignParentBottom="true"
                                 android:layout_marginRight="@dimen/paddingSmall"
                                 android:layout_marginLeft="@dimen/paddingSmall"
@@ -166,6 +167,7 @@
                             android:paddingTop="14dp"
                             android:paddingRight="1dp"
                             android:src="@drawable/ic_list_order"
+                            android:tint="@color/green_dark"
                             android:text="Pondok Aren"
                             android:textStyle="bold" />
 
@@ -249,6 +251,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:background="@drawable/et_style2"
                         android:clickable="true"
+                        android:drawableTint="@color/green_dark"
                         android:drawableRight="@drawable/ic_laporan"
                         android:drawablePadding="@dimen/paddingXXXSmall"
                         android:editable="false"
@@ -353,6 +356,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -461,6 +465,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
+                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -536,6 +541,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -611,6 +617,7 @@
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
                         android:drawablePadding="@dimen/paddingSmall"
+                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:text="@string/tambah_karyawan"
@@ -734,6 +741,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -963,6 +971,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -1034,6 +1043,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -1138,6 +1148,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -1293,6 +1304,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginRight="@dimen/paddingMedium"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableLeft="@drawable/ic_add"
                             android:drawablePadding="@dimen/paddingSmall"
                             android:focusable="true"
@@ -1397,6 +1409,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
