--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -82,6 +82,7 @@
                                 android:paddingLeft="16dp"
                                 android:paddingTop="16dp"
                                 android:paddingRight="16dp"
+                                android:tint="@color/green_dark"
                                 android:src="@drawable/ic_scan_barcode" />
 
 
@@ -166,6 +167,7 @@
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="20dp"
                             android:paddingLeft="16dp"
+                            android:tint="@color/green_dark"
                             android:paddingTop="14dp"
                             android:paddingRight="1dp"
                             android:src="@drawable/ic_list_order"
@@ -254,6 +256,7 @@
                         android:layout_gravity="center"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:background="@drawable/et_style2"
+                        android:drawableTint="@color/green_dark"
                         android:clickable="true"
                         android:drawableRight="@drawable/ic_laporan"
                         android:drawablePadding="@dimen/paddingXXXSmall"
@@ -364,6 +367,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -473,6 +477,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
+                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -546,6 +551,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
+                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -619,6 +625,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
 
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -742,6 +749,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
+                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -971,6 +979,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -1040,6 +1049,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
+                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -1148,6 +1158,7 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
+                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -1264,6 +1275,7 @@
                             android:clickable="true"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
+                            android:drawableTint="@color/green_dark"
                             android:editable="false"
                             android:focusable="false"
                             android:foreground="?attr/selectableItemBackground"
@@ -1423,6 +1435,7 @@
                             android:clickable="true"
                             android:drawableLeft="@drawable/ic_add"
                             android:drawablePadding="@dimen/paddingSmall"
+                            android:drawableTint="@color/green_dark"
                             android:focusable="true"
                             android:foreground="?attr/selectableItemBackground"
                             android:text="transaksi kas"
