--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="green_dark">#F3931B</color>
+    <color name="green_dark">#F05027</color>
     <color name="green">#F1FAE7</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
