--- a/app/src/main/res/layout-land/dialog_tambah_produk.xml
+++ b/app/src/main/res/layout-land/dialog_tambah_produk.xml
@@ -12,6 +12,7 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:id="@+id/txt_title"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/paddingSmall"
@@ -175,6 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/paddingSmall"
+                android:id="@+id/layStock"
 
                 app:hintTextAppearance="@style/TextLabel">
 
