--- a/app/src/main/res/layout/dialog_tambah_produk.xml
+++ b/app/src/main/res/layout/dialog_tambah_produk.xml
@@ -18,6 +18,7 @@
             android:gravity="center"
             android:text="@string/tambah_produk"
             android:textAllCaps="true"
+            android:id="@+id/txt_title"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -156,6 +157,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/layStock"
                     android:layout_height="wrap_content"
                     app:hintTextAppearance="@style/TextLabel">
 
